# epistemic-engine

./: CONTRIBUTING.md  README.md  SECURITY.md  TESTING.md  pyproject.toml
.github/workflows/: tests.yml
ewm/: __init__.py  actor.py  configurator.py  cost.py  db.py  memory.py  migrate.py  perception.py  self_modify.py  server.py  types.py  world_model.py
hooks/: batch_reprocess_transcripts.py  ewm_session_start_hook.py  ewm_session_stop_hook.py  test_ewm_stop_hook.py
tests/: test_ewm_all.py  test_ubs_integration.py  test_ubs_truth_layer.py
ubs/: context_router.py  core_math.py  entity_registry.py  guardian.py  judge_entity.py  judicial_analyzer.py  multi_feed_outliers.py  ocean_feeds.py  outlier_predictions.py  prediction_validator.py  rumor_feeds.py  seabed_topology.py  steering_vectors.py  truth_layer.py  truth_validator.py
ubs/file-indexer/: README.md  com.user.knowledge-indexer.plist  indexer.py  install.sh  pinecone_sync.py  schema.yaml  sync-from-remote.sh  test-knowledge.yaml
verity/: __init__.py  belief_propagation.py  dempster_shafer.py  provenance.py  types.py  uncertainty.py
